fixing project display structure

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
                     <div class="col-lg-4">
                         <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                        <h4 class="wow fadeInUp" data-wow-delay="0.2s">(650) 521-6699</h4>
+                        <h4 class="wow fadeInUp" data-wow-delay="0.2s">ronak@ronovo.io</h4>
                         <br><br>
                     </div>
 
