--- a/index.html
+++ b/index.html
@@ -45,45 +45,44 @@
     <div class="hero">
         <h1>Hi I'm Ronak, a student at the University of Washington</h1>
     </div>
-    <div class="container">
-        <h6 class="text-center">Selected projects</h6>
 
-        <div class="vertical"></div>
+    <div class="container">
         <div class="row">
-            <div class="col mt-5">
-                <div class="card">
-                    <img class="card-img-top" src="http://source.unsplash.com/600x400" alt="">
+            <div class="col">
+                <div class="card project-card">
+                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
                     <div class="card-body">
-                        <h4 class="card-title">Glimpse Wearables</h4>
-                        <p class="card-text">Landing page for Amazon Catalyst winner glimpse wearables</p>
-                        <a href="https://github.com/ronak0624/glimpselanding">Github Repo</a>
-                        <a href="https://glimpsewearables.com">Deployed Site</a>
+                        <h4 class="card-title">Title</h4>
+                        <p class="card-text">Text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card project-card">
+                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Title</h4>
+                        <p class="card-text">Text</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col mt-3">
-                <div class="card">
-                    <img class="card-img-top" src="http://source.unsplash.com/600x400" alt="">
+            <div class="col">
+                <div class="card project-card">
+                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
                     <div class="card-body">
-                        <h4 class="card-title">Send Care</h4>
-                        <p class="card-text">Product prototype for UW Full Stack bootcamp</p>
-                        <a href="https://github.com/JandyStephens/Send-Care-MEOW">Github Repo</a>
-                        <a href="https://ronak0624.github.io/Send-Care-MEOW">Deployed Site</a>
+                        <h4 class="card-title">Title</h4>
+                        <p class="card-text">Text</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col mt-3">
-                <div class="card">
-                    <img class="card-img-top" src="http://source.unsplash.com/600x400" alt="">
+            <div class="col">
+                <div class="card project-card">
+                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
                     <div class="card-body">
-                        <h4 class="card-title">IMDb Database Analysis</h4>
-                        <p class="card-text">RStudio Shinyapp for a UW INFO 200 Final Project</p>
-                        <a href="https://github.com/jharshe-1730199/final-project">Github Repo</a>
-                        <a href=" https://ronakpatel.shinyapps.io/IMDB-Data-Report/">Deployed Site</a>
+                        <h4 class="card-title">Title</h4>
+                        <p class="card-text">Text</p>
                     </div>
                 </div>
             </div>
