proj hover anims

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 
     <title>Ronak Patel</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://use.typekit.net/xbg7zzr.css">
 
     <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/wow.min.js"></script>
 
 </head>
@@ -47,44 +46,53 @@
     </div>
 
     <div class="container">
+        <h2 class="mb-4">My Work</h2>
         <div class="row">
             <div class="col">
-                <div class="card project-card">
-                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                <a class="project-link" href="">
+                    <div class="card project-card">
+                        <img class="card-img-top" src="assets/img/cosys.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Cosystems, Inc</h4>
+                            <p class="card-text">Legacy telecom hardware provider company site.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card project-card">
-                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                <a class="project-link" href="">
+                    <div class="card project-card">
+                        <img class="card-img-top" src="assets/img/beertha.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Send Care Now</h4>
+                            <p class="card-text">A site to send nice gifts to your friends when they are sick</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <div class="card project-card">
-                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                <a class="project-link" href="">
+                    <div class="card project-card">
+                        <img class="card-img-top" src="assets/img/glimpsesite.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Glimpse Wearables</h4>
+                            <p class="card-text">Landing page for Amazon Catalyst winner.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card project-card">
-                    <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
-                    <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                <a class="project-link" href="">
+                    <div class="card project-card">
+                        <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Title</h4>
+                            <p class="card-text">Text</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
