--- a/index.html
+++ b/index.html
@@ -41,25 +41,29 @@
             <li><a href="contact.html">contact</a></li>
         </ul>
     </div>
-    <div class="hero">
-        <h1>Hi I'm Ronak, a student at the University of Washington</h1>
     </div>
 
     <div class="container">
+        <div class="row">
+            <div class="col-auto">
+                <h1>Hi I'm Ronak, a student at the University of Washington</h1>
+            </div>
+        </div>
         <h2 class="mb-4">My Work</h2>
         <div class="row">
-            <div class="col">
+            <div class="col-md">
                 <a class="project-link" href="">
                     <div class="card project-card">
                         <img class="card-img-top" src="assets/img/cosys.png" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Cosystems, Inc</h4>
                             <p class="card-text">Legacy telecom hardware provider company site.</p>
+                            <p class="card-text">Legacy telecom hardware provider company site.</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-md">
                 <a class="project-link" href="">
                     <div class="card project-card">
                         <img class="card-img-top" src="assets/img/beertha.png" alt="">
@@ -72,7 +76,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-md">
                 <a class="project-link" href="">
                     <div class="card project-card">
                         <img class="card-img-top" src="assets/img/glimpsesite.png" alt="">
@@ -83,8 +87,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col">
-                <a class="project-link" href="">
+            <div class="col-md">
+                <!-- <a class="project-link" href="">
                     <div class="card project-card">
                         <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
                         <div class="card-body">
@@ -92,11 +96,10 @@
                             <p class="card-text">Text</p>
                         </div>
                     </div>
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
-    <div class="scroll-down"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
