--- a/index.html
+++ b/index.html
@@ -7,88 +7,94 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Ronak Patel</title>
-
+    <!-- CDNs -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
     <link rel="stylesheet" href="https://use.typekit.net/xbg7zzr.css">
-
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/wow.min.js"></script>
 
 </head>
 
 <body>
-    <nav>
-        <span class="brand">
-            <a href="index.html">ronak</a>
-        </span>
-        <ul class="menu">
-            <li><a href="index.html">home</a></li>
-            <li><a href="about.html">about me</a></li>
-            <li><a href="contact.html">contact</a></li>
-        </ul>
-        <div class="toggle">
-            <div class="span">menu</div>
-        </div>
-    </nav>
-    <div class="resize">
-        <div class="close-btn">close</div>
-        <ul class="menu">
-            <li><a href="index.html">home</a></li>
-            <li><a href="about.html">about me</a></li>
-            <li><a href="contact.html">contact</a></li>
-        </ul>
-    </div>
-    </div>
-
     <div class="container">
         <div class="row">
-            <div class="col-auto">
-                <h1>Hi I'm Ronak, a student at the University of Washington</h1>
-            </div>
-        </div>
-        <h2 class="mb-4">My Work</h2>
-        <div class="row">
-            <div class="col-md">
-                <a class="project-link" href="">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="assets/img/cosys.png" alt="">
-                        <div class="card-body">
-                            <h4 class="card-title">Cosystems, Inc</h4>
-                            <p class="card-text">Legacy telecom hardware provider company site.</p>
-                            <p class="card-text">Legacy telecom hardware provider company site.</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md">
-                <a class="project-link" href="">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="assets/img/beertha.png" alt="">
-                        <div class="card-body">
-                            <h4 class="card-title">Send Care Now</h4>
-                            <p class="card-text">A site to send nice gifts to your friends when they are sick</p>
-                        </div>
-                    </div>
-                </a>
+            <div class="col py-5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26.011" height="41.773" viewBox="0 0 26.011 41.773">
+                    <g id="Group_1" data-name="Group 1" transform="translate(-177.989 -41)">
+                        <g id="Group_1-2" data-name="Group 1" transform="translate(118 -13.228)">
+                            <line id="Line_1" data-name="Line 1" y1="21" transform="translate(64 75)" fill="none"
+                                stroke="#fff" stroke-width="8" />
+                            <path id="Path_2" data-name="Path 2" d="M39,47.273s-.834-17.5,21.67-17.139"
+                                transform="translate(25.005 28.099)" fill="none" stroke="#fff" stroke-width="8" />
+                        </g>
+                        <path id="Rectangle_1" data-name="Rectangle 1"
+                            d="M2,0H3A0,0,0,0,1,3,0V8A0,0,0,0,1,3,8H0A0,0,0,0,1,0,8V2A2,2,0,0,1,2,0Z"
+                            transform="translate(201 41)" fill="#fff" />
+                    </g>
+                </svg>
             </div>
         </div>
         <div class="row">
-            <div class="col-md">
-                <a class="project-link" href="">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="assets/img/glimpsesite.png" alt="">
-                        <div class="card-body">
-                            <h4 class="card-title">Glimpse Wearables</h4>
-                            <p class="card-text">Landing page for Amazon Catalyst winner.</p>
-                        </div>
-                    </div>
-                </a>
+            <div class="col-auto hero">
+                <h1>Hi, I'm Ronak</h1>
+                <h1>
+                    <a href="" class="typewrite">
+                        <span class="wrap"></span>
+                    </a>
+                </h1>
             </div>
-            <div class="col-md">
-                <!-- <a class="project-link" href="">
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="contact-icons">
+                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href=""><i class="fad fa-envelope"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="work">
+            <h2 class="mb-5">Here's some of my work</h2>
+            <div class="row">
+                <div class="col-md">
+                    <a class="project-link" href="http://www.cosystems.com">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="assets/img/cosys.png" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">Cosystems, Inc</h4>
+                                <p class="card-text">Legacy telecom hardware provider company site.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md">
+                    <a class="project-link" href="">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="assets/img/beertha.png" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">Send Care Now</h4>
+                                <p class="card-text">A site to send nice gifts to your friends when they are sick</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <a class="project-link" href="http://www.glimpsewearables.com">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="assets/img/glimpsesite.png" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">Glimpse Wearables</h4>
+                                <p class="card-text">Landing page for Amazon Catalyst winner.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md">
+                    <!-- <a class="project-link" href="">
                     <div class="card project-card">
                         <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
                         <div class="card-body">
@@ -97,6 +103,7 @@
                         </div>
                     </div>
                 </a> -->
+                </div>
             </div>
         </div>
     </div>
