added all cards

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/xbg7zzr.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
+        integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
+
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
@@ -52,6 +53,7 @@
                     <a href=""><i class="fab fa-github"></i></a>
                     <a href=""><i class="fab fa-linkedin"></i></a>
                     <a href=""><i class="fad fa-envelope"></i></a>
+                    <a href=""><i class="fad fa-file"></i></a>
                 </div>
             </div>
         </div>
@@ -70,9 +72,9 @@
                     </a>
                 </div>
                 <div class="col-md">
-                    <a class="project-link" href="">
+                    <a class="project-link" href="https://jandystephens.github.io/Send-Care-MEOW">
                         <div class="card project-card">
-                            <img class="card-img-top" src="assets/img/beertha.png" alt="">
+                            <img class="card-img-top" src="assets/img/sendcare.png" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">Send Care Now</h4>
                                 <p class="card-text">A site to send nice gifts to your friends when they are sick</p>
@@ -94,15 +96,31 @@
                     </a>
                 </div>
                 <div class="col-md">
-                    <!-- <a class="project-link" href="">
-                    <div class="card project-card">
-                        <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
-                        <div class="card-body">
-                            <h4 class="card-title">Title</h4>
-                            <p class="card-text">Text</p>
+                    <a class="project-link" href="https://github.com/ronak0624/LIRI-Bot">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">LIRI Bot</h4>
+                                <p class="card-text">A Node CLI tool that searches movies, concerts and music.</p>
+                            </div>
                         </div>
-                    </div>
-                </a> -->
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <a class="project-link" href="https://github.com/ronak0624/Project-2">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">Go Gang</h4>
+                                <p class="card-text">A spontaneous meetup social site. </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md">
+                    
                 </div>
             </div>
         </div>
