fixed project card glitch

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/xbg7zzr.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
-        integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -50,10 +49,22 @@
         <div class="row">
             <div class="col">
                 <div class="contact-icons">
-                    <a href=""><i class="fab fa-github"></i></a>
-                    <a href=""><i class="fab fa-linkedin"></i></a>
-                    <a href=""><i class="fad fa-envelope"></i></a>
-                    <a href=""><i class="fad fa-file"></i></a>
+                    <a href="https://www.github.com/">
+                        <i class="fa fa-github"></i>
+                        <span>Github</span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ronakwebdev/">
+                        <i class="fa fa-linkedin"></i>
+                        <span>LinkedIn</span>
+                    </a>
+                    <a href="mailto:ronakpat@uw.edu">
+                        <i class="fa fa-envelope"></i>
+                        <span>Email</span>
+                    </a>
+                    <a href="assets/resume.pdf">
+                        <i class="fa fa-file"></i>
+                        <span>Resume</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -61,7 +72,7 @@
             <h2 class="mb-5">Here's some of my work</h2>
             <div class="row">
                 <div class="col-md">
-                    <a class="project-link" href="http://www.cosystems.com">
+                    <a target="_blank" class="project-link" href="http://www.cosystems.com">
                         <div class="card project-card">
                             <img class="card-img-top" src="assets/img/cosys.png" alt="">
                             <div class="card-body">
@@ -72,7 +83,7 @@
                     </a>
                 </div>
                 <div class="col-md">
-                    <a class="project-link" href="https://jandystephens.github.io/Send-Care-MEOW">
+                    <a target="_blank" class="project-link" href="https://jandystephens.github.io/Send-Care-MEOW">
                         <div class="card project-card">
                             <img class="card-img-top" src="assets/img/sendcare.png" alt="">
                             <div class="card-body">
@@ -85,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col-md">
-                    <a class="project-link" href="http://www.glimpsewearables.com">
+                    <a target="_blank" class="project-link" href="http://www.glimpsewearables.com">
                         <div class="card project-card">
                             <img class="card-img-top" src="assets/img/glimpsesite.png" alt="">
                             <div class="card-body">
@@ -96,31 +107,15 @@
                     </a>
                 </div>
                 <div class="col-md">
-                    <a class="project-link" href="https://github.com/ronak0624/LIRI-Bot">
+                    <a target="_blank" class="project-link" href="https://github.com/ronak0624/LIRI-Bot">
                         <div class="card project-card">
-                            <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
+                            <img class="card-img-top" src="assets/img/LIRIScreenshot.png" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">LIRI Bot</h4>
                                 <p class="card-text">A Node CLI tool that searches movies, concerts and music.</p>
                             </div>
                         </div>
                     </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md">
-                    <a class="project-link" href="https://github.com/ronak0624/Project-2">
-                        <div class="card project-card">
-                            <img class="card-img-top" src="https://source.unsplash.com/800x600" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">Go Gang</h4>
-                                <p class="card-text">A spontaneous meetup social site. </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md">
-                    
                 </div>
             </div>
         </div>
