project info modal

--- a/index.html
+++ b/index.html
@@ -83,15 +83,60 @@
                     </a>
                 </div>
                 <div class="col-md">
-                    <a target="_blank" class="project-link" href="https://jandystephens.github.io/Send-Care-MEOW">
+                    <div class="project" data-toggle="modal" data-target="#swurf-modal">
                         <div class="card project-card">
-                            <img class="card-img-top" src="assets/img/sendcare.png" alt="">
+                            <img class="card-img-top" src="assets/img/swurf_xd.png" alt="">
                             <div class="card-body">
-                                <h4 class="card-title">Send Care Now</h4>
-                                <p class="card-text">A site to send nice gifts to your friends when they are sick</p>
+                                <h4 class="card-title">Swurf Savings</h4>
+                                <p class="card-text">A financial tool for share economy workers</p>
+                            </div>
+                            <div class="project-info d-none">
+                                <div class="description">A financial tool for share economy and workers</div>
+                                <a href="https://swurf.herokuapp.com/">Demo</a>
+                                <a href="https://www.github.com/ronak0624/swurf-savings">Front-End Repository</a>
+                                <a href="https://www.github.com/ronak0624/swurf-savings-backend">Back-End Repository</a>
                             </div>
                         </div>
-                    </a>
+                        <div class="modal fade" id="swurf-modal" tabindex="-1" role="dialog" aria-labelledby="swurfDescription" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h2 class="modal-title" id="swurfSavings">Swurf Savings</h2>
+                                  <button class="btn btn-sm btn-circle btn-neutral align-self-start" data-dismiss="modal" type="button" aria-label="Close">
+                                    <svg class="gi gi-close fs-sm" width="1em" height="1em" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                      <path d="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"></path>
+                                    </svg>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="container">
+                                        <img class="card-img-top" src="assets/img/swurf_xd.png" alt="">
+                                    </div>
+                                    <p class="mb-3 mt-5 lead">
+                                        Swurf Savings is a tool designed for rideshare drivers to help manage saving more easily. Having been a Door Dash driver on the side for around 4 years, 
+                                        I have always wanted a clearer picture of how much I need to work to save up for my various savings goals. This tool helps you track your most recent shifts and
+                                        your earnings per shift. 
+                                    </p>
+                                    <h5>Tools Used:</h5>
+                                    <ul>
+                                        <li>React</li>
+                                        <li>Express</li>
+                                        <li>MongoDB</li>
+                                        <li>Node</li>
+                                        <li>Adobe XD (Wireframes)</li>
+                                        <li>Heroku (Deployment)</li>
+                                    </ul>
+                                </div>
+                                <div class="modal-footer">
+                                    <div class="demo-repo">
+                                        <a href="https://github.com/ronak0624/swurf-savings" class="left" data-dismiss="modal">Github Repository</a>
+                                        <a href="https://swurf.herokuapp.com/" class="right" data-dismiss="modal">Demo</a>
+                                    </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
